# water-wars

./: .gitignore  README.md  cabal.project  cabal.project.freeze  stack-lts-14.yaml  stack-lts-16.yaml  stack-nightly.yaml  stack.yaml  water-wars.cabal
.github/workflows/: cabal.yml  format.yml  lint.yml  stack.yml
benchmark/: Main.hs
client/: water-wars-client.cabal
client/app/: Main.hs
client/src/WaterWars/Client/: OptParse.hs
client/src/WaterWars/Client/Codec/: Resource.hs
client/src/WaterWars/Client/Network/: Connection.hs  State.hs
client/src/WaterWars/Client/Render/: Animation.hs  Config.hs  Display.hs  State.hs  Update.hs
client/src/WaterWars/Client/Render/Terrain/: Solid.hs
client/src/WaterWars/Client/Resources/: Block.hs  Resources.hs
server/: water-wars-server.cabal
server/app/: Main.hs  OptParse.hs
server/src/WaterWars/Server/: ClientConnection.hs  ConnectionMgnt.hs  Env.hs  EventLoop.hs  Events.hs  GameLoop.hs
server/src/WaterWars/Server/Action/: Restart.hs  Start.hs  Util.hs
src/WaterWars/Core/: DefaultGame.hs  Game.hs  GameNg.hs  Physics.hs
src/WaterWars/Core/Game/: Action.hs  Base.hs  Constants.hs  Events.hs  Map.hs  State.hs  Utils.hs
src/WaterWars/Core/Physics/: Collision.hs  Constants.hs  Geometry.hs  Utils.hs
src/WaterWars/Core/Terrain/: Block.hs  Decoration.hs  Read.hs
src/WaterWars/Network/: Protocol.hs
test-suite/: Main.hs
test-suite/WaterWars/Core/: CollisionTest.hs  GameNgTest.hs  GameUtilsTest.hs  GeometryTest.hs  Terrains.hs  TerrainsUtils.hs
