cabal-version:      2.4
name:               water-wars
version:            0.0.0
synopsis:           The core of WaterWars
homepage:           https://github.com/FailWhaleBrigade/water-wars#readme
bug-reports:        https://github.com/FailWhaleBrigade/water-wars/issues
author:             Fendor, VeryMilkyJoe, Power-Fungus
maintainer:         Fendor, VeryMilkyJoe, Power-Fungus
license:            MIT
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  LICENSE.md
  README.md
  stack.yaml

source-repository head
  type:     git
  location: https://github.com/FailWhaleBrigade/water-wars

common common
  build-depends:    base
  ghc-options:      -Wall
  default-language: Haskell2010

library
  import:          common
  hs-source-dirs:  src
  build-depends:
    , array
    , cereal
    , classy-prelude
    , extensible-effects
    , extra

  -- cabal-fmt: expand src
  exposed-modules:
    WaterWars.Core.DefaultGame
    WaterWars.Core.Game
    WaterWars.Core.Game.Action
    WaterWars.Core.Game.Base
    WaterWars.Core.Game.Constants
    WaterWars.Core.Game.Events
    WaterWars.Core.Game.Map
    WaterWars.Core.Game.State
    WaterWars.Core.Game.Utils
    WaterWars.Core.GameNg
    WaterWars.Core.Physics
    WaterWars.Core.Physics.Collision
    WaterWars.Core.Physics.Constants
    WaterWars.Core.Physics.Geometry
    WaterWars.Core.Physics.Projectiles
    WaterWars.Core.Physics.Utils
    WaterWars.Core.Terrain.Block
    WaterWars.Core.Terrain.Decoration
    WaterWars.Core.Terrain.Read
    WaterWars.Network.Protocol

  other-modules:   Paths_water_wars

test-suite water-wars-test-suite
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test-suite
  main-is:        Main.hs
  build-depends:
    , array
    , classy-prelude
    , hspec
    , HUnit
    , tasty
    , tasty-hspec
    , tasty-hunit
    , water-wars

  other-modules:
    Paths_water_wars
    WaterWars.Core.CollisionTest
    WaterWars.Core.GameNgTest
    WaterWars.Core.GameUtilsTest
    WaterWars.Core.GeometryTest
    WaterWars.Core.Terrains
    WaterWars.Core.TerrainsUtils

benchmark water-wars-benchmarks
  import:         common
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  Paths_water_wars
  hs-source-dirs: benchmark
  build-depends:
    , criterion
    , water-wars
