cabal-version: 2.4
name:          water-wars-client
version:       0.0.0
synopsis:      Water Wars client library
homepage:      https://github.com/FailWhaleBrigade/water-wars#readme
bug-reports:   https://github.com/FailWhaleBrigade/water-wars/issues
author:        Fendor, VeryMilkyJoe, Power-Fungus
maintainer:    Fendor, VeryMilkyJoe, Power-Fungus
license:       MIT
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/FailWhaleBrigade/water-wars

common common
  build-depends:
    , base                  ^>=4.12
    , classy-prelude        ^>=1.5
    , gloss                 ^>=1.13
    , monad-logger          ^>=0.3
    , mtl                   ^>=2.2
    , optparse-applicative  ^>=0.15.1
    , proteaaudio           ^>=0.7.1
    , stm                   ^>=2.5
    , transformers          ^>=0.5.6
    , water-wars

  default-extensions:
    NoImplicitPrelude
    FlexibleContexts
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables

  ghc-options:        -Wall -eventlog
  default-language:   Haskell2010

library
  import:             common
  exposed-modules:
    WaterWars.Client.Codec.Resource
    WaterWars.Client.Network.Connection
    WaterWars.Client.Network.State
    WaterWars.Client.OptParse
    WaterWars.Client.Render.Animation
    WaterWars.Client.Render.Config
    WaterWars.Client.Render.Display
    WaterWars.Client.Render.State
    WaterWars.Client.Render.Terrain.Solid
    WaterWars.Client.Render.Update
    WaterWars.Client.Resources.Block
    WaterWars.Client.Resources.Resources

  other-modules:      Paths_water_wars_client
  hs-source-dirs:     src
  default-extensions:
    DeriveGeneric
    LambdaCase
    MonoLocalBinds

  build-depends:
    , array               ^>=0.5.3
    , extensible-effects  ^>=5.0
    , JuicyPixels         ^>=3.3.4
    , websockets          ^>=0.12.7

executable water-wars-client
  import:         common
  main-is:        Main.hs
  other-modules:  Paths_water_wars_client
  hs-source-dirs: app
  ghc-options:    -rtsopts -threaded -O2 -with-rtsopts=-N
  build-depends:
    , ekg                ^>=0.4
    , water-wars-client
