cabal-version: 2.4
name:          water-wars-client
version:       0.0.0
synopsis:      Water Wars client library
homepage:      https://github.com/FailWhaleBrigade/water-wars#readme
bug-reports:   https://github.com/FailWhaleBrigade/water-wars/issues
author:        Fendor, VeryMilkyJoe, Power-Fungus
maintainer:    Fendor, VeryMilkyJoe, Power-Fungus
license:       MIT
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/FailWhaleBrigade/water-wars

common common
  build-depends:
    , base
    , classy-prelude
    , gloss
    , monad-logger
    , mtl
    , optparse-applicative
    , proteaaudio
    , stm
    , transformers
    , water-wars

  ghc-options:      -Wall
  default-language: Haskell2010

library
  import:          common
  hs-source-dirs:  src
  build-depends:
    , array
    , extensible-effects
    , JuicyPixels
    , websockets

  -- cabal-fmt: expand src
  exposed-modules:
    WaterWars.Client.Codec.Resource
    WaterWars.Client.Network.Connection
    WaterWars.Client.Network.State
    WaterWars.Client.OptParse
    WaterWars.Client.Render.Animation
    WaterWars.Client.Render.Config
    WaterWars.Client.Render.Display
    WaterWars.Client.Render.State
    WaterWars.Client.Render.Terrain.Solid
    WaterWars.Client.Render.Update
    WaterWars.Client.Resources.Block
    WaterWars.Client.Resources.Resources

  other-modules:   Paths_water_wars_client

executable water-wars-client
  import:        common
  main-is:       app/Main.hs
  build-depends:
    , ekg
    , water-wars-client

  other-modules: Paths_water_wars_client
  ghc-options:   -O2
