cabal-version: 2.4
name:          water-wars-server
version:       0.0.0
synopsis:      Water Wars server library
homepage:      https://github.com/FailWhaleBrigade/water-wars#readme
bug-reports:   https://github.com/FailWhaleBrigade/water-wars/issues
author:        Fendor, VeryMilkyJoe, Power-Fungus
maintainer:    Fendor, VeryMilkyJoe, Power-Fungus
license:       MIT
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/FailWhaleBrigade/water-wars

common common
  build-depends:
    , array               ^>=0.5.3
    , base                ^>=4.12
    , classy-prelude      ^>=1.5
    , extensible-effects  ^>=5.0
    , log-effect          ^>=1.2
    , time                ^>=1.8
    , transformers-base   ^>=0.4.5
    , uuid                ^>=1.3
    , water-wars
    , websockets          ^>=0.12.7

  default-extensions:
    NoImplicitPrelude
    FlexibleContexts
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables

  ghc-options:        -Wall -eventlog
  default-language:   Haskell2010

library
  import:             common
  exposed-modules:
    WaterWars.Server.Action.Restart
    WaterWars.Server.Action.Start
    WaterWars.Server.Action.Util
    WaterWars.Server.ClientConnection
    WaterWars.Server.ConnectionMgnt
    WaterWars.Server.Env
    WaterWars.Server.EventLoop
    WaterWars.Server.Events
    WaterWars.Server.GameLoop

  other-modules:      Paths_water_wars_server
  hs-source-dirs:     src
  default-extensions:
    DeriveGeneric
    FlexibleInstances
    LambdaCase
    MonoLocalBinds
    MultiParamTypeClasses

  build-depends:      pretty-simple

executable water-wars-server
  import:         common
  main-is:        Main.hs
  other-modules:
    OptParse
    Paths_water_wars_server

  hs-source-dirs: app
  ghc-options:    -rtsopts -threaded -O2 -with-rtsopts=-N
  build-depends:
    , ekg                   ^>=0.4
    , optparse-applicative  ^>=0.15.1
    , water-wars-server
