cabal-version: 2.4
name:          water-wars-server
version:       0.0.0
synopsis:      Water Wars server library
homepage:      https://github.com/FailWhaleBrigade/water-wars#readme
bug-reports:   https://github.com/FailWhaleBrigade/water-wars/issues
author:        Fendor, VeryMilkyJoe, Power-Fungus
maintainer:    Fendor, VeryMilkyJoe, Power-Fungus
license:       MIT
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/FailWhaleBrigade/water-wars

common common
  build-depends:
    , array
    , base
    , classy-prelude
    , extensible-effects
    , log-effect
    , time
    , transformers-base
    , uuid
    , water-wars
    , websockets

  ghc-options:      -Wall
  default-language: Haskell2010

library
  import:          common
  hs-source-dirs:  src
  build-depends:   pretty-simple

  -- cabal-fmt: expand src
  exposed-modules:
    WaterWars.Server.Action.Restart
    WaterWars.Server.Action.Start
    WaterWars.Server.Action.Util
    WaterWars.Server.ClientConnection
    WaterWars.Server.ConnectionMgnt
    WaterWars.Server.Env
    WaterWars.Server.EventLoop
    WaterWars.Server.Events
    WaterWars.Server.GameLoop

  other-modules:   Paths_water_wars_server

executable water-wars-server
  import:         common
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , ekg
    , optparse-applicative
    , water-wars-server

  other-modules:
    OptParse
    Paths_water_wars_server

  ghc-options:    -O2
